infra/kubernetes/services/microservices-templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-${SERVICE_NAME}
  labels:
    app: ${SERVICE_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${SERVICE_NAME}
  template:
    metadata:
      labels:
        app: ${SERVICE_NAME}
    spec:
      serviceAccountName: sa-${SERVICE_NAME}-service
      containers:
      - name: ${SERVICE_NAME}-container
        image: service-image
        imagePullPolicy: Always
        ports:
        - containerPort: ${SERVICE_PORT}
        livenessProbe:
          httpGet:
            port: ${SERVICE_PORT}  
            path: ${SERVICE_PATH_HEALTH_CHECKS}  
          initialDelaySeconds: 1
          periodSeconds: 10
