infra/kubernetes/services/microservices-templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${SERVICE_NAME}-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ${SERVICE_NAME}.rootdr.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ${SERVICE_NAME}
            port:
              number: ${SERVICE_PORT}
